--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=0616
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 server.port = 1232
 
